corrected alignment issues:

--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@
 .top {
   display: grid;
   grid-area: 1 / 2 / span 1 / span 1;
-  justify-content: center;
-  align-items: center;
+  justify-items: center;
+  align-content: center;
 }
 
 .top img {
